  method has gained the argument level instead of alpha. The results
  of the summary method are much more extensive with results in terms
  of Pc, Pd and d-prime.
- revision of findcr function. It is now faster and more reliable
  since it is using uniroot rather than a simple while loop and an
  explicit test that the return value is in fact the critical value is
  conducted.  
- Error in discrimSim for the threeAFC method corrected.

October 28. 2010: version 1.2.3:

- major revision of discrim, discrimPwr and discrimSS including
  confint.discrim, profile.discrim, print.discrim and
  plot.profile.discrim. 

November 25. 2010: version 1.2.4:

- Vignette 'Methodology' describes the statistical methodology of
  sensory discrimination tests. 
- Added the convenience functions d.primePwr and d.primeSS.

November 26. 2010: version 1.2.5:

- print.anota is fixed.
- confint.anota and plot.anota functions added and documented in the
  AnotA help file. Examples added to help page.

December 9. 2010: version 1.2.6:

- corrections made to Statistical Methodology vignette.

March 3. 2011: version 1.2.7:

- major update of twoAC implementation
- added exact power computations for the 2-AC protocol in function
  twoACpwr

March 8. 2011: version 1.2.8:

- added clm2twoAC function for extracting 2-AC parameters etc. from
  cumulative link models (clm[m]s from package ordinal)
- including "Examples for 2-AC paper" as vignette

April 8. 2011: version 1.2.9:

- correcting t and f as logicals in sweave vignettes to TRUE and FALSE
  (mail from Brian Ripley 11-04-08) 

May 10. 2011: version 1.2.10:

- completing partially matched arguments.

August 12. 2011: version 1.2.11:

- updating clm2twoAC() to accomodate change to ordinal::clm

August 19. 2011: version 1.2.12:

- interchanging the second and third arguments of AUC.default

September 23. 2011: version 1.2.13:

- bug in plot.discrim (mean separation of perceptual curves was wrong)
  corrected. 