@@ -1,7 +1,7 @@
 Package: sensR
 Type: Package
 Title: Thurstonian models for sensory discrimination
-Version: 1.2-13
+Version: 1.2-14
 Date: 2011-09-23
 Author: Rune Haubo B Christensen and Per Bruun Brockhoff
 Maintainer: Rune Haubo B Christensen <rhbc@imm.dtu.dk>
